--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.1.0",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
-		"name": "Tharindu N. Madhusanka",
-		"email": "mail@tharindu.dev",
+		"name": "Ekamjot Kaur",
+		"email": "ekamjot.chugh1004@gmail.com",
 		"url": "https://tharindu.dev"
 	},
 	"license": "MIT",
@@ -19,11 +19,14 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.8.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
 		"react-helmet": "^6.1.0",
+		"react-icons": "^4.10.1",
 		"react-router-dom": "^6.11.1",
 		"react-scripts": "5.0.1",
+		"react-tsparticles": "^2.11.0",
 		"styled-components": "^5.3.10",
 		"web-vitals": "^2.1.4"
 	},
